--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 autopep8==2.0.2
 Django==4.1.7
+django-debug-toolbar==4.0.0
 django-filter==23.1
 djangorestframework==3.14.0
 pycodestyle==2.10.0
