--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.6.0
 autopep8==2.0.2
+defusedxml==0.7.1
 Django==4.1.7
 django-debug-toolbar==4.0.0
 django-filter==23.1
 djangorestframework==3.14.0
+djangorestframework-xml==2.0.0
 pycodestyle==2.10.0
 pytz==2023.3
 sqlparse==0.4.3
